feat: person list added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=eventuhub
+
+# Configurações do Banco de Dados PostgreSQL
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/EventHub
+spring.datasource.username=root
+spring.datasource.password=123456789
