--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=eventuhub
 
-# Configurações do Banco de Dados PostgreSQL
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/EventHub
 spring.datasource.username=root
-spring.datasource.password=123456789
+spring.datasource.password=senhasenha@123
