--- a/front end/EventHub/package.json
+++ b/front end/EventHub/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.24.1",
     "tailwind-merge": "^2.4.0",
     "tailwind-variants": "^0.2.1"
