wip: auth micro service

--- a/back end/Spring-Cloud-Config/src/main/resources/application.properties
+++ b/back end/Spring-Cloud-Config/src/main/resources/application.properties
@@ -4,6 +4,6 @@ server.port=8762
 
 spring.cloud.config.server.git.uri=https://github.com/jeanmmlima/ms-config-server-example
 
-## para repositório privativo
+## para repositario privativo
 #spring.cloud.config.server.git.username=${GITHUB_USER}
-#spring.cloud.config.server.git.password=${GITHUB_PASS} --> TOKEN DO GITHUB com permissao de repositórios privativos
+#spring.cloud.config.server.git.password=${GITHUB_PASS} --> TOKEN DO GITHUB com permissao de repositorios privativos
