--- a/back end/Spring-Cloud-Eureka/src/main/resources/application.properties
+++ b/back end/Spring-Cloud-Eureka/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-#Configuração do microsserviço
+#Configuracao do microsservicos
 spring.application.name=Spring-Cloud-Eureka
 server.port=8761
 
-#Configuração do Eureka
+#Configuracao do Eureka
 eureka.instance.hostname=Eureka-Cloud
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
