--- a/back end/Spring-Cloud-Gateway/src/main/resources/application.properties
+++ b/back end/Spring-Cloud-Gateway/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8763
 #informar localizacao do server eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-#configuração do gateway
+#configuracao do gateway
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
