--- a/front end/EventHub/package.json
+++ b/front end/EventHub/package.json
@@ -16,7 +16,7 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-input-mask": "^2.0.4",
+    "react-number-format": "^5.4.0",
     "react-router-dom": "^6.24.1",
     "tailwind-merge": "^2.4.0",
     "tailwind-variants": "^0.2.1"
@@ -24,7 +24,6 @@
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/react-input-mask": "^3.0.5",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
