--- a/back end/pass/src/main/resources/application.properties
+++ b/back end/pass/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=pass
+server.port=8766
+
+# Configurações do DataSource
+spring.datasource.url=jdbc:mysql://localhost:3308/EventHub
+spring.datasource.username=root
+spring.datasource.password=senhasenha@123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+eureka.client.service-url.defaultZone=http://localhost:8763/eureka
