--- a/back end/user/src/main/resources/application.properties
+++ b/back end/user/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.datasource.username=root
 spring.datasource.password=senhasenha@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.main.allow-circular-references=true
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
