--- a/back end/Spring-Cloud-Gateway/src/main/resources/application.properties
+++ b/back end/Spring-Cloud-Gateway/src/main/resources/application.properties
@@ -8,11 +8,19 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
-spring.cloud.gateway.routes[0].id=service1
-spring.cloud.gateway.routes[0].uri=lb://service1
-spring.cloud.gateway.routes[0].predicates[0]=Path=/service1/**
+spring.cloud.gateway.routes[0].id=auth
+spring.cloud.gateway.routes[0].uri=lb://auth
+spring.cloud.gateway.routes[0].predicates[0]=Path=/auth/**
 
-spring.cloud.gateway.routes[1].id=service2
-spring.cloud.gateway.routes[1].uri=lb://service2
-spring.cloud.gateway.routes[1].predicates[0]=Path=/service2/**
+spring.cloud.gateway.routes[1].id=event
+spring.cloud.gateway.routes[1].uri=lb://event
+spring.cloud.gateway.routes[1].predicates[0]=Path=/event/**
+
+spring.cloud.gateway.routes[2].id=pass
+spring.cloud.gateway.routes[2].uri=lb://pass
+spring.cloud.gateway.routes[2].predicates[0]=Path=/pass/**
+
+spring.cloud.gateway.routes[3].id=user
+spring.cloud.gateway.routes[3].uri=lb://user
+spring.cloud.gateway.routes[3].predicates[0]=Path=/user/**
 
