--- a/back end/event/src/main/resources/application.properties
+++ b/back end/event/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 spring.application.name=event
-server.port=8765
+#server.port=8765
+
+server.port=${PORT:0}
 
 # Configurações do DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/EventHub
 spring.datasource.username=root
-spring.datasource.password=senhasenha@123
+spring.datasource.password=mortadelaYY1@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
 
 spring.main.allow-circular-references=true
 
-eureka.client.service-url.defaultZone=http://localhost:8762/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
