feat: preparação para o springconfig

--- a/back end/event/src/main/resources/application.properties
+++ b/back end/event/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.datasource.username=root
 spring.datasource.password=mortadelaYY1@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#spring.config.import=optional:configserver:
+spring.config.import=configserver:
+
 spring.jpa.hibernate.ddl-auto=update
 
 spring.main.allow-circular-references=true
