--- a/back end/pass/src/main/resources/application.properties
+++ b/back end/pass/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 
+#spring.config.import=optional:configserver:
+spring.config.import=configserver:
+
 spring.main.allow-circular-references=true
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
