--- a/back end/user/src/main/resources/application.properties
+++ b/back end/user/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.application.name=user
-#server.port=8764
+server.port=8764
 
-server.port=${PORT:0}
 
 # Configurações do DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/EventHub
 spring.datasource.username=root
-spring.datasource.password=mortadelaYY1@
+spring.datasource.password=senhasenha@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
