feat: can request to login endpoint now

--- a/back end/event/src/main/resources/application.properties
+++ b/back end/event/src/main/resources/application.properties
@@ -4,15 +4,15 @@ spring.application.name=event
 server.port=${PORT:0}
 
 # Configurações do DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/EventHub
-spring.datasource.username=root
-spring.datasource.password=mortadelaYY1@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${spring.datasource.url}
+spring.datasource.username=${spring.datasource.username}
+spring.datasource.password=${spring.datasource.password}
+spring.datasource.driver-class-name=${spring.datasource.driver-class-name}
+
+spring.jpa.hibernate.ddl-auto=${spring.jpa.hibernate.ddl-auto}
 
 #spring.config.import=optional:configserver:
 spring.config.import=configserver:
-
-spring.jpa.hibernate.ddl-auto=update
 
 spring.main.allow-circular-references=true
 
