--- a/back end/Spring-Cloud-Config/src/main/resources/application.properties
+++ b/back end/Spring-Cloud-Config/src/main/resources/application.properties
@@ -2,8 +2,7 @@ spring.application.name=Spring-Cloud-Config
 spring.cloud.config.server.git.default-label=main
 server.port=8888
 
-spring.cloud.config.server.git.uri=https://github.com/jeanmmlima/ms-config-server-example
+spring.cloud.config.server.git.uri=https://github.com/JoaoDant4s/config-server-eventhub.git
 
-## para repositario privativo
-#spring.cloud.config.server.git.username=${GITHUB_USER}
-#spring.cloud.config.server.git.password=${GITHUB_PASS} --> TOKEN DO GITHUB com permissao de repositorios privativos
+spring.cloud.config.server.git.username=JoaoDant4s
+spring.cloud.config.server.git.password=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
