--- a/back end/user/src/main/resources/application.properties
+++ b/back end/user/src/main/resources/application.properties
@@ -2,13 +2,11 @@ spring.application.name=user
 server.port=8764
 
 
-# Configurações do DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/EventHub
-spring.datasource.username=root
-spring.datasource.password=mortadelaYY1@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=${spring.datasource.url}
+spring.datasource.username=${spring.datasource.username}
+spring.datasource.password=${spring.datasource.password}
+spring.datasource.driver-class-name=${spring.datasource.driver-class-name}
+spring.jpa.hibernate.ddl-auto=${spring.jpa.hibernate.ddl-auto}
 
 #spring.config.import=optional:configserver:
 spring.config.import=configserver:
